<resources>
    <string name="app_name">愛呷料</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main_page_title">冰箱</string>
    <string name="recipe_page_title"></string>
    <string-array name="kinds_of_ingredient">
        <item>葉菜花菜</item>葉菜花菜
        豆菜與瓜菜
        根莖類
        蕈菇類
        辛香蔥蒜
        豆類製品
        牛肉
        豬肉
        禽類
        羊肉
        海鮮
        加工肉品
        <item>豆菜與瓜菜</item>
        <item>根莖類</item>
        <item>蕈菇類</item>
        <item>辛香蔥蒜</item>
        <item>豆類製品</item>
        <item>牛肉</item>
        <item>豬肉</item>
        <item>禽類</item>
        <item>羊肉</item>
        <item>海鮮</item>
        <item>加工肉品</item>
    </string-array>

    <string name="addReceiptTileText">請將發票條碼放入區域</string>

    <string name="shoppingItemIdTitle">項目</string>
    <string name="shoppingItemNameTitle">名稱</string>
    <string name="shoppingItemSortTitle">種類</string>
    <string name="shoppingItemQuantityTitle">數量</string>
    <string name="shoppingItemStateTitle">完成</string>
    <string name="shoppingListAddItemTitle">新增食材</string>
    <string name="shoppingListAddItemHintForName">請輸入食材名稱</string>
    <string name="shoppingListAddItemHintForSort">請輸入食材種類</string>
    <string name="shoppingListAddItemHintForQuantity">請輸入食材數量</string>
    <string name="shoppingListAddItemConfirmText">加入</string>
    <string name="shoppingListAddItemCancelText">取消</string>

    <string name="title_activity_main2">MainActivity2</string>

    <string name="navbarTitleForHome">首頁</string>
    <string name="navbarTitleForManage">管理</string>
    <string name="navbarTitleForRecipe">食譜</string>
    <string name="navbarTitleForSchedule">規劃</string>
    <string name="navbarTitleForScanner">新增</string>
    <string name="navbarTitleForShoppingList">購入</string>

    <string name="RecipePageTitleForName">料理名稱</string>
    <string name="RecipeTitleForNeed">所需食材</string>

    <string-array name="foodManagementTabLayoutTag">
        <item>肉類</item>
        <item>魚肉類</item>
        <item>豆蛋類</item>
        <item>蔬菜類</item>
        <item>乳品類</item>
        <item>水果類</item>
        <item>全榖雜糧類</item>
        <item>堅果種子類</item>
    </string-array>
    <string name="title_home">愛呷料</string>
    <string name="title_dashboard">愛呷料</string>
    <string name="title_notifications">愛呷料</string>
    <string name="title_food_management">Refrigerator</string>
    <string name="title_recipe">Recipes</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_shopping_list">__</string>

    <string-array name="ingredients_name_array">
        <item>牛小排</item>
        <item>豬五花</item>
        <item>高麗菜</item>
        <item>花椰菜</item>
        <item>韭菜</item>
    </string-array>

    <string-array name="ingredients_sort_array">
        <item>肉類</item>
        <item>蔬菜類</item>
        <item>蛋豆類</item>
        <item>花椰菜</item>
    </string-array>

    <string-array name="day_of_week">
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
        <item>SUN</item>
    </string-array>
</resources>