<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_refrigerator"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_food_management" />

    <item
        android:id="@+id/navigation_recipe"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_recipe" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_shopping_list"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_shopping_list" />

</menu>