<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.shopping_list.ShoppingListFragment"
    android:id="@+id/ingredient_list"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="@color/dark_pink"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bold"
                android:text="@string/shoppingItemIdTitle"
                android:textAlignment="center"
                android:textSize="24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bold"
                android:text="@string/shoppingItemNameTitle"
                android:textAlignment="center"
                android:textSize="24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bold"
                android:text="@string/shoppingItemSortTitle"
                android:textAlignment="center"
                android:textSize="24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bold"
                android:text="@string/shoppingItemQuantityTitle"
                android:textAlignment="center"
                android:textSize="24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bold"
                android:text="@string/shoppingItemStateTitle"
                android:textAlignment="center"
                android:textSize="24dp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shoppingListItemRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>