<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <activity
        android:id="@+id/navigation_camera"
        android:name="com.example.fragment_test.ui.scanner.ScanReceiptActivity"
        android:label="Camera"
        tools:layout="@layout/activity_scan_receipt"/>
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fragment_test.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_camera"
            app:destination="@id/navigation_camera" />
    </fragment>

    <fragment
        android:id="@+id/navigation_refrigerator"
        android:name="com.example.fragment_test.ui.refrigerator.FoodManagementFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_refrigerator" />

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.example.fragment_test.ui.recipe.RecipeFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.fragment_test.ui.schedule.ScheduleFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_shopping_list"
        android:name="com.example.fragment_test.ui.shopping_list.ShoppingListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_shopping_list" />
</navigation>